<?xml version="1.0"?>
<package  format="2">
  <name>epnp</name>
  <version>1.0.1</version>
  <description>Efficient Perspective-n-Point Camera Pose</description>

  <license>BSD</license>

  <maintainer email="Deray@todo.todo">Jeremie Deray</maintainer>

  <url type="website">http://cvlab.epfl.ch/EPnP/index.php</url>

  <author>V. Lepetit, EPFL</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <exec_depend>rclcpp</exec_depend>

</package>
